# repro-grpc-bazel

./: README.md  WORKSPACE
protos/: BUILD.bazel  bb_cc_grpc_library.bzl  cc_grpc_library.bzl  generate_cc.bzl
